comment about async and defer feature for script tag

--- a/01-basic-variables-datatypes-functions/index.html
+++ b/01-basic-variables-datatypes-functions/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
+    <!-- use defer for just downloading js file while index is parsing
+        also then parse the js. We have async feature also that download and parsing
+        the js file as soon as possible -->
     <script src="assets/scripts/vendor.js" defer></script>
     <script src="assets/scripts/main.js" defer></script>
   </head>
